--- a/index.css
+++ b/index.css
@@ -25,15 +25,18 @@ nav > ul{
     text-decoration: none;
     list-style: none;
     margin-top: 7px;
+
 }
 
 nav > ul > li{
     font-size: 16px;
+    
 }
 
 nav > ul > li > a{
-    color: black;
+    color: white;
     text-decoration: none;
+    font-weight: 500;
 }
 
 .login{
@@ -115,11 +118,22 @@ nav > ul > li > a{
 }
 
 .services{
+  
+    height: 90vh;
+   
+}
+
+.Service{
+    text-align: center;
+    margin-top: 50px;
+}
+
+
+.Cards{
     display: flex;
-    height: 100vh;
     justify-content: space-around;
     align-items: center;
-   
+    margin-top: 60px;
 }
 
 .btn.btns{
@@ -134,7 +148,7 @@ nav > ul > li > a{
 .About{
     display: flex;
 
-    height: 93vh;
+    height: 100vh;
     width: 100%;
 }
 
@@ -142,6 +156,19 @@ nav > ul > li > a{
     background-color: #2264DC;
     width: 50%;
     height: 100%;
+}
+
+.text > h1{
+    text-align: center;
+    margin-top: 30px;
+}
+
+.text > p{
+    font-size: 20px;
+    width: 75%;
+    text-align: justify;
+    margin-top: 50px;
+    margin-left: 40px;
 }
 
 .pic2{
@@ -153,4 +180,55 @@ nav > ul > li > a{
     width: 500px;
     height: 300px;
   
+}
+
+.Portfolio{
+
+    height: 90vh;
+    width: 100%;
+
+}
+.Portfolio h2{
+    text-align: center;
+    margin-top: 50px;
+
+}
+
+.grid{
+    display: grid;
+    grid-template-columns: repeat(4,200px);
+    grid-template-rows: 200px 200px;
+    justify-content: center;
+    grid-gap: 20px;
+    margin-top: 40px;
+   
+}
+
+.picture{
+    background-color: gray;
+}
+
+.Footer{
+    display: flex;
+    height: 93vh;
+    width: 100%;
+}
+
+.Info{
+    width: 50%;
+    height: 100%;
+    background-color: #2264DC;
+}
+
+.Form{
+
+    width: 50%;
+    height: 100%;
+
+}
+
+form{
+    width: 70%;
+    margin: auto;
+    margin-top:100px;
 }
