--- a/index.css
+++ b/index.css
@@ -314,15 +314,18 @@ form{
 .infotext{
     display: flex;
     gap: 20px;
+    justify-content: center;
     align-items: center;
     color: white;
 }
 
 .infotext ion-icon{
+    
     font-size: 20px;
 }
 
 .coord{
     margin-top: 30px;
     padding: 20px;
+    width: 100%;
 }
